--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "sweetalert2": "^10.13.0",
+    "sweetalert2-react-content": "^3.2.2",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4"
   },
