--- a/package.json
+++ b/package.json
@@ -47,6 +47,9 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.1.6"
+    "@types/enzyme": "^3.10.8",
+    "@types/react-router-dom": "^5.1.6",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.4.1",
+    "enzyme": "^3.11.0"
   }
 }
