--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@types/enzyme": "^3.10.8",
     "@types/react-router-dom": "^5.1.6",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.4.1",
-    "enzyme": "^3.11.0"
+    "enzyme": "^3.11.0",
+    "redux-mock-store": "^1.5.4"
   }
 }
