--- a/package.json
+++ b/package.json
@@ -2,8 +2,25 @@
   "name": "burger-builder",
   "version": "1.0.0",
   "private": true,
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
   "dependencies": {
     "@reduxjs/toolkit": "^1.5.0",
+    "axios": "^0.21.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
+    "redux-saga": "^1.1.3",
+    "sweetalert2": "^10.13.0",
+    "sweetalert2-react-content": "^3.2.2",
+    "web-vitals": "^0.2.4"
+  },
+  "devDependencies": {
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
@@ -11,23 +28,11 @@
     "@types/node": "^12.19.9",
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
-    "axios": "^0.21.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-redux": "^7.2.2",
-    "react-router-dom": "^5.2.0",
+    "@types/react-router-dom": "^5.1.6",
+    "@types/redux-mock-store": "^1.0.2",
     "react-scripts": "4.0.1",
-    "redux-saga": "^1.1.3",
-    "sweetalert2": "^10.13.0",
-    "sweetalert2-react-content": "^3.2.2",
-    "typescript": "^4.1.3",
-    "web-vitals": "^0.2.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "redux-mock-store": "^1.5.4",
+    "typescript": "^4.1.3"
   },
   "eslintConfig": {
     "extends": [
@@ -46,13 +51,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@types/enzyme": "^3.10.8",
-    "@types/react-router-dom": "^5.1.6",
-    "@types/redux-mock-store": "^1.0.2",
-    "@wojtekmaj/enzyme-adapter-react-17": "^0.4.1",
-    "enzyme": "^3.11.0",
-    "redux-mock-store": "^1.5.4"
   }
 }
